--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,42 @@
-<router-outlet></router-outlet>
-<app-navbar></app-navbar>
+<mat-sidenav-container class="sidenav-container mat-app-background">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+  >
+    <mat-nav-list>
+      <a mat-list-item href="#">Ordini</a>
+      <a mat-list-item href="#">Prodotti</a>
+      <a mat-list-item href="#">Analisi Vendite</a>
+      <a mat-list-item href="#">Acquisti</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar *ngIf="!loginPage" color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async"
+      >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <span>Seller Manager</span>
+      <button *ngIf="(isHandset$ | async) === false" mat-button>Ordini</button>
+      <button *ngIf="(isHandset$ | async) === false" mat-button>
+        Prodotti
+      </button>
+      <button *ngIf="(isHandset$ | async) === false" mat-button>
+        Analisi Vendite
+      </button>
+      <button *ngIf="(isHandset$ | async) === false" mat-button>
+        Acquisti
+      </button>
+    </mat-toolbar>
+    <!-- Fine toolbar DICHIARARE QUI LA PAGINA -->
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
