--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<mat-sidenav-container class="sidenav-container mat-app-background">
-  <mat-sidenav
-    #drawer
-    class="sidenav"
-    fixedInViewport
-    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'"
-  >
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav class="mat-elevation-z4" role="navigation" mode="over">
     <mat-nav-list>
       <a mat-list-item href="#">Ordini</a>
       <a mat-list-item href="#">Prodotti</a>
@@ -13,13 +7,13 @@
       <a mat-list-item href="#">Acquisti</a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar *ngIf="!loginPage" color="primary">
+  <mat-sidenav-content role="region">
+    <mat-toolbar *ngIf="!loginPage" color="primary" class="mat-elevation-z6">
       <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="drawer.toggle()"
+        (click)="sidenav.toggle()"
         *ngIf="isHandset$ | async"
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
@@ -36,7 +30,6 @@
         Acquisti
       </button>
     </mat-toolbar>
-    <!-- Fine toolbar DICHIARARE QUI LA PAGINA -->
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
