--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,9 +1,10 @@
 .divLogin{
-    width: 300px;
-    height: 100px;
-    display:inline-block;
+    width: 40%;
+    height: 100%;
+    align-content: center;
+    display: inline-flexbox;
     text-align: center;
-    position: relative;
-    margin-left: 40%;
-    margin-top: 10%;
+    position: absolute;
+    //margin-left: 40%;
+    //margin-top: 10%;
   }
