--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav class="mat-elevation-z4" role="navigation" mode="over">
     <mat-nav-list>
-      <a mat-list-item href="#">Ordini</a>
+      <a mat-list-item routerLink="ordini">Ordini</a>
       <a mat-list-item href="#">Prodotti</a>
       <a mat-list-item href="#">Analisi Vendite</a>
       <a mat-list-item href="#">Acquisti</a>
@@ -19,7 +19,13 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Seller Manager</span>
-      <button *ngIf="(isHandset$ | async) === false" mat-button>Ordini</button>
+      <button
+        *ngIf="(isHandset$ | async) === false"
+        mat-button
+        routerLink="ordini"
+      >
+        Ordini
+      </button>
       <button *ngIf="(isHandset$ | async) === false" mat-button>
         Prodotti
       </button>
@@ -28,6 +34,10 @@
       </button>
       <button *ngIf="(isHandset$ | async) === false" mat-button>
         Acquisti
+      </button>
+      <span style="flex: 1 1 auto"></span>
+      <button mat-icon-button>
+        <mat-icon aria-label="logout">logout</mat-icon>
       </button>
     </mat-toolbar>
     <router-outlet></router-outlet>
