--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav class="mat-elevation-z4" role="navigation" mode="over">
     <mat-nav-list>
-      <a mat-list-item href="#">Ordini</a>
-      <a mat-list-item href="#">Prodotti</a>
-      <a mat-list-item href="#">Analisi Vendite</a>
-      <a mat-list-item href="#">Acquisti</a>
+      <a mat-list-item href="#">
+        <mat-icon aria-label="ordini">receipt_long</mat-icon>
+        Ordini
+      </a>
+      <a mat-list-item href="#">
+        <mat-icon aria-label="prodotti">category</mat-icon>
+        Prodotti
+      </a>
+      <a mat-list-item href="#">
+        <mat-icon aria-label="acquisti">storefront</mat-icon>
+        Acquisti
+      </a>
+      <a mat-list-item href="#">
+        <mat-icon aria-label="analisi">show_chart</mat-icon>
+        Analisi Vendite
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content role="region">
@@ -18,16 +30,37 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Seller Manager</span>
-      <button *ngIf="(isHandset$ | async) === false" mat-button>Ordini</button>
-      <button *ngIf="(isHandset$ | async) === false" mat-button>
-        Prodotti
+      <span style="padding-right: 1%">Seller Manager</span>
+      <div
+        *ngIf="(isHandset$ | async) === false"
+        style="display: flex; height: 100%"
+      >
+        <button mat-button>
+          <mat-icon aria-label="ordini">receipt_long</mat-icon>
+          Ordini
+        </button>
+        <button mat-button>
+          <mat-icon aria-label="prodotti">category</mat-icon>
+          Prodotti
+        </button>
+        <button mat-button>
+          <mat-icon aria-label="acquisti">storefront</mat-icon>
+          Acquisti
+        </button>
+        <button mat-button>
+          <mat-icon aria-label="analisi">show_chart</mat-icon>
+          Analisi Vendite
+        </button>
+      </div>
+      <span style="flex: 1 1 auto"></span>
+      <button mat-icon-button>
+        <mat-icon aria-label="notifiche">notifications</mat-icon>
       </button>
-      <button *ngIf="(isHandset$ | async) === false" mat-button>
-        Analisi Vendite
+      <button mat-icon-button>
+        <mat-icon aria-label="carrello">shopping_cart</mat-icon>
       </button>
-      <button *ngIf="(isHandset$ | async) === false" mat-button>
-        Acquisti
+      <button mat-icon-button>
+        <mat-icon aria-label="logout">logout</mat-icon>
       </button>
     </mat-toolbar>
     <router-outlet></router-outlet>
