--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,25 +4,27 @@
       <div class="row">
           <div class="card-group">
             <div class="card p-4">
-              <div class="card-body divLogin">
+              <div class="card-body">
 
-                <form [formGroup]="loginForm">
-                  <mat-card>
+                <form [formGroup]="loginForm" ngNativeValidate >
+                  <mat-card class="lgin">
                     <div class="row">
                       <mat-form-field appearance="standard">
                         <mat-label>username</mat-label>
-                        <input matInput>
+                        <input formControlName="username" [formControl]="user" matInput required>
                         <mat-hint>Hint</mat-hint>
                       </mat-form-field>
                     </div>
                     <div class="row">
                       <mat-form-field appearance="standard">
-                        <mat-label>passworda  </mat-label>
-                        <input matInput>
+                        <mat-label>password</mat-label>
+                        <input formControlName="password" [formControl]="pass" matInput required>
                         <mat-hint>Hint</mat-hint>
                       </mat-form-field>
+                    </div><br>
+                    <div class="row" style="padding-top: 5px; padding-bottom: 5px;">
+                      <button type="button" mat-flat-button color="primary" (click) ="login()">Login</button>
                     </div>
-                    <button type="button" mat-flat-button color="primary" (click) ="login()">Login</button>
                   </mat-card>
                 </form>
 
