--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,16 +7,30 @@
             <div class="card-body">
               <form [formGroup]="loginForm" ngNativeValidate>
                 <mat-card class="lgin">
+                  <button
+                    *ngIf="wrongLogin"
+                    disableRipple
+                    mat-flat-button
+                    color="warn"
+                  >
+                    Username o password errati
+                  </button>
                   <div class="row">
                     <mat-form-field appearance="standard">
                       <mat-label>Username</mat-label>
                       <input formControlName="username" matInput required />
+                      <mat-error *ngIf="loginForm.get('username').invalid">
+                        Valore richiesto
+                      </mat-error>
                     </mat-form-field>
                   </div>
                   <div class="row">
                     <mat-form-field appearance="standard">
                       <mat-label>Password</mat-label>
                       <input formControlName="password" matInput required />
+                      <mat-error *ngIf="loginForm.get('password').invalid">
+                        Valore richiesto
+                      </mat-error>
                     </mat-form-field>
                   </div>
                   <br />
@@ -29,6 +43,7 @@
                       mat-flat-button
                       color="primary"
                       (click)="login()"
+                      [disabled]="loginForm.pristine || loginForm.invalid"
                     >
                       Login
                     </button>
