--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,11 +60,7 @@
         <mat-icon aria-label="carrello">shopping_cart</mat-icon>
       </button>
       <button mat-icon-button>
-        <mat-icon aria-label="logout">logout</mat-icon>
-      </button>
-      <span style="flex: 1 1 auto;"></span>
-      <button mat-icon-button (click)="logout()">
-        <mat-icon>logout</mat-icon>
+        <mat-icon aria-label="logout" (click)="(logout)">logout</mat-icon>
       </button>
     </mat-toolbar>
     <router-outlet></router-outlet>
