--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
   <mat-sidenav #sidenav class="mat-elevation-z4" role="navigation" mode="over">
     <mat-nav-list>
       <a mat-list-item href="#">
-        <mat-icon aria-label="ordini">receipt_long</mat-icon>
+        <mat-icon aria-label="ordini" routerLink="['/ordini']">
+          receipt_long
+        </mat-icon>
         Ordini
       </a>
       <a mat-list-item href="#">
@@ -35,8 +37,8 @@
         *ngIf="(isHandset$ | async) === false"
         style="display: flex; height: 100%"
       >
-        <button mat-button>
-          <mat-icon aria-label="ordini">receipt_long</mat-icon>
+        <button mat-button routerLink="ordini">
+          <mat-icon aria-label="ordini"> receipt_long </mat-icon>
           Ordini
         </button>
         <button mat-button>
@@ -60,11 +62,7 @@
         <mat-icon aria-label="carrello">shopping_cart</mat-icon>
       </button>
       <button mat-icon-button>
-        <mat-icon aria-label="logout" (click)="(logout)">logout</mat-icon>
-      </button>
-      <span style="flex: 1 1 auto"></span>
-      <button mat-icon-button>
-        <mat-icon aria-label="logout">logout</mat-icon>
+        <mat-icon aria-label="logout" (click)="logout()">logout</mat-icon>
       </button>
     </mat-toolbar>
     <router-outlet></router-outlet>
