--- a/src/shared/paginator/paginator.component.html
+++ b/src/shared/paginator/paginator.component.html
@@ -1,5 +1,4 @@
 <mat-paginator [length]="length"
                [pageSize]="pageSize"
-               [pageSizeOptions]="pageSizeOptions"
-               (page)="pageEvent = $event">
+               [pageSizeOptions]="pageSizeOptions">
 </mat-paginator>
