--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -1,10 +1,11 @@
 <mat-card class="example-card" *ngFor="let card of obs | async">
   <mat-card-header>
-    <mat-card-title>{{ card.title }}</mat-card-title>
+    <mat-card-title>{{ card.amazonOrderId }}</mat-card-title>
+    <mat-card-subtitle>{{ card.buyerEmail }}</mat-card-subtitle>
   </mat-card-header>
   <span class="spacer"></span>
   <mat-card-content>
-    <p>{{ card.text }}</p>
+    <p>{{ card.purchaseDate }}</p>
     <!--Lista Oggeti-->
     <mat-accordion>
       <mat-expansion-panel>
@@ -13,9 +14,9 @@
         </mat-expansion-panel-header>
         <!--Lista oggetti-->
         <mat-list role="list">
-          <div *ngFor="let item of card.items">
+          <div *ngFor="let item of card.ordersItems">
             <mat-list-item role="listitem">
-              {{ item.title }} {{ item.text }}
+              {{ item.asin }} {{ item.title }}
             </mat-list-item>
             <mat-divider></mat-divider>
           </div>
