--- a/src/shared/paginator/paginator.component.html
+++ b/src/shared/paginator/paginator.component.html
@@ -1,4 +1,5 @@
 <mat-paginator [length]="length"
                [pageSize]="pageSize"
-               [pageSizeOptions]="pageSizeOptions">
+               [pageSizeOptions]="pageSizeOptions"
+               (page)="sendPageSize(pageSize)">
 </mat-paginator>
