--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -1,37 +1,94 @@
-<mat-card class="example-card" *ngFor="let card of obs | async">
-  <mat-card-header>
-    <mat-card-title>{{ card.amazonOrderId }}</mat-card-title>
-    <mat-card-subtitle>{{ card.buyerEmail }}</mat-card-subtitle>
-  </mat-card-header>
-  <span class="spacer"></span>
-  <mat-card-content>
-    <p>{{ card.purchaseDate }}</p>
-    <!--Lista Oggeti-->
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title> Oggetti </mat-panel-title>
-        </mat-expansion-panel-header>
-        <!--Lista oggetti-->
-        <mat-list role="list">
-          <div *ngFor="let item of card.ordersItems">
-            <mat-list-item role="listitem">
-              {{ item.asin }} {{ item.title }}
-            </mat-list-item>
-            <mat-divider></mat-divider>
-          </div>
-        </mat-list>
-        <!--Fine lista oggeti-->
-      </mat-expansion-panel>
-    </mat-accordion>
-    <!--Fine lista oggetti-->
-  </mat-card-content>
-  <span class="spacer"></span>
-  <button mat-icon-button>
-    <mat-icon aria-label="info" color="link">info</mat-icon>
-  </button>
-</mat-card>
-<mat-paginator
-  class="paginator-sticky"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-></mat-paginator>
+<div>
+  <!--Search button-->
+  <form [formGroup]="filterForm">
+    <div class="p-8 top-0 right-0">
+      <div class="flex items-center rounded-full shadow-xl">
+        <mat-form-field
+          floatLabel="never"
+          class="w-1/2 py-4 px-6 leading-tight"
+          color="accent"
+        >
+          <input
+            formControlName="amazonOrderId"
+            matInput
+            id="amazonOrderId"
+            type="text"
+            placeholder="Id"
+          />
+        </mat-form-field>
+        <mat-form-field
+          floatLabel="never"
+          class="w-1/2 py-4 px-6 leading-tight"
+          color="accent"
+        >
+          <input
+            formControlName="buyerEmail"
+            matInput
+            id="buyerEmail"
+            type="email"
+            placeholder="E-mail"
+          />
+        </mat-form-field>
+        <mat-form-field
+          floatLabel="never"
+          class="w-1/2 py-4 px-6 leading-tight"
+          color="accent"
+        >
+          <mat-label>Secgli una data</mat-label>
+          <input
+            formControlName="purchaseDate"
+            matInput
+            [matDatepicker]="picker"
+            id="purchaseDate"
+          />
+          <mat-datepicker-toggle matSuffix [for]="picker">
+          </mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <div class="p-4">
+          <button mat-mini-fab color="accent" (click)="filter()">
+            <mat-icon aria-label="search">search</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
+  </form>
+
+  <mat-card class="example-card" *ngFor="let card of obs | async">
+    <mat-card-header>
+      <mat-card-title>{{ card.amazonOrderId }}</mat-card-title>
+      <mat-card-subtitle>{{ card.buyerEmail }}</mat-card-subtitle>
+    </mat-card-header>
+    <span class="spacer"></span>
+    <mat-card-content>
+      <p>{{ card.purchaseDate | date: "dd/MM/yyyy" }}</p>
+      <!--Lista Oggeti-->
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> Oggetti </mat-panel-title>
+          </mat-expansion-panel-header>
+          <!--Lista oggetti-->
+          <mat-list role="list">
+            <div *ngFor="let item of card.ordersItems">
+              <mat-list-item role="listitem">
+                {{ item.asin }} {{ item.title }}
+              </mat-list-item>
+              <mat-divider></mat-divider>
+            </div>
+          </mat-list>
+          <!--Fine lista oggeti-->
+        </mat-expansion-panel>
+      </mat-accordion>
+      <!--Fine lista oggetti-->
+    </mat-card-content>
+    <span class="spacer"></span>
+    <button mat-icon-button (click)="openDettaglio()">
+      <mat-icon aria-label="info" color="link">info</mat-icon>
+    </button>
+  </mat-card>
+  <mat-paginator
+    class="paginator-sticky"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+  ></mat-paginator>
+</div>
