paginator prodotti funzionante

--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -25,4 +25,4 @@
         </mat-card-actions>
     </mat-card>
 </div>
-<app-paginator (pageSizeEvent)="getElPerPage($event)"></app-paginator>
+<app-paginator (pageSizeEvent)="getElPerPage($event)" (indexEvent)="getIndex($event)"></app-paginator>
