Very basic ordini-info popup

--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -83,7 +83,7 @@
       <!--Fine lista oggetti-->
     </mat-card-content>
     <span class="spacer"></span>
-    <button mat-icon-button (click)="openDettaglio()">
+    <button mat-icon-button (click)="openDettaglio(card)">
       <mat-icon aria-label="info" color="link">info</mat-icon>
     </button>
   </mat-card>
