--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -1,8 +1,14 @@
 <div class="grid gap-4 grid-cols-5 p-8">
     <mat-card class="example-card" *ngFor="let item of listaProdotti">
         <mat-card-header>
-            <mat-card-title>{{item.title}}</mat-card-title>
+            <mat-card-title>
+                {{item.title}}
+                <button mat-icon-button (click)="openDettaglio(item)">
+                    <mat-icon aria-label="info" color="link">info</mat-icon>
+                  </button>
+            </mat-card-title>
             <mat-card-subtitle>{{item.category}}</mat-card-subtitle>
+
         </mat-card-header>
         <img mat-card-image src="assets/images.jpg" alt="foto tech">
         <mat-card-content>
