--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav class="mat-elevation-z4" role="navigation" mode="over">
     <mat-nav-list>
-      <a mat-list-item href="#">
-        <mat-icon aria-label="ordini" routerLink="['/ordini']">
-          receipt_long
-        </mat-icon>
+      <a mat-list-item routerLink="ordini">
+        <mat-icon aria-label="ordini"> receipt_long </mat-icon>
         Ordini
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item routerLink="prodotti">
         <mat-icon aria-label="prodotti">category</mat-icon>
         Prodotti
       </a>
@@ -41,7 +39,7 @@
           <mat-icon aria-label="ordini"> receipt_long </mat-icon>
           Ordini
         </button>
-        <button mat-button>
+        <button mat-button routerLink="prodotti">
           <mat-icon aria-label="prodotti">category</mat-icon>
           Prodotti
         </button>
