--- a/src/app/pages/ordini/ordini-dettaglio/ordini-dettaglio.component.html
+++ b/src/app/pages/ordini/ordini-dettaglio/ordini-dettaglio.component.html
@@ -2,13 +2,33 @@
   <h1>{{ ordine.amazonOrderId }}</h1>
 </div>
 <div mat-dialog-content class="mat-typography">
-  <div *ngFor="let item of ordine | keyvalue">
-    <mat-list role="list">
-      <mat-list-item role="listitem">
-        {{ item.key | titlecase }}: {{ item.value }}
-      </mat-list-item>
-      <mat-divider></mat-divider>
-    </mat-list>
+  <div class="grid grid-flow-col grid-cols-6 grid-rows-6 gap-4">
+    <div *ngFor="let item of ordine | keyvalue">
+      <p role="listitem" *ngIf="item.key !== 'ordersItems'">
+        {{ item.key | titlecase }}: <br />
+        {{ item.value }}
+      </p>
+      <mat-divider *ngIf="item.key !== 'ordersItems'"></mat-divider>
+    </div>
+  </div>
+  <div class="pt-5">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Prodotti </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div *ngFor="let prodotto of ordine.ordersItems">
+        <div class="grid grid-flow-col grid-cols-3 grid-rows-3 gap-4">
+          <div *ngFor="let item of prodotto | keyvalue">
+            <p>
+              {{ item.key | titlecase }}: <br />
+              {{ item.value }}
+            </p>
+            <mat-divider class="pt-2"></mat-divider>
+          </div>
+        </div>
+        <mat-divider></mat-divider>
+      </div>
+    </mat-expansion-panel>
   </div>
 </div>
 <div mat-dialog-actions>
