--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -66,7 +66,7 @@
       <mat-accordion>
         <mat-expansion-panel>
           <mat-expansion-panel-header>
-            <mat-panel-title> Oggetti </mat-panel-title>
+            <mat-panel-title> Prodotti </mat-panel-title>
           </mat-expansion-panel-header>
           <!--Lista oggetti-->
           <mat-list role="list">
@@ -87,8 +87,6 @@
       <mat-icon aria-label="info" color="link">info</mat-icon>
     </button>
   </mat-card>
-  <mat-paginator
-    class="paginator-sticky"
-    [pageSizeOptions]="[5, 10, 25, 100]"
-  ></mat-paginator>
+  <mat-paginator class="paginator-sticky" [pageSizeOptions]="[5, 10, 25, 100]">
+  </mat-paginator>
 </div>
