fixed graphics navbar

--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -88,7 +88,7 @@
     </button>
   </mat-card>
   <mat-paginator
-    class="sticky bottom-0 z-50"
+    class="w-full fixed bottom-0"
     [length]="length"
     [pageSize]="pageSize"
     [pageSizeOptions]="pageSizeOptions"
