--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <mat-icon aria-label="prodotti">category</mat-icon>
         Prodotti
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item href="#" routerLink="acquisti">
         <mat-icon aria-label="acquisti">storefront</mat-icon>
         Acquisti
       </a>
@@ -43,7 +43,7 @@
           <mat-icon aria-label="prodotti">category</mat-icon>
           Prodotti
         </button>
-        <button mat-button>
+        <button mat-button routerLink="acquisti">
           <mat-icon aria-label="acquisti">storefront</mat-icon>
           Acquisti
         </button>
