--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
       <button mat-icon-button>
         <mat-icon aria-label="notifiche">notifications</mat-icon>
       </button>
-      <button mat-icon-button>
+      <button mat-icon-button (click)="openCarrello()">
         <mat-icon aria-label="carrello">shopping_cart</mat-icon>
       </button>
       <button mat-icon-button>
