--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -87,6 +87,7 @@
       <mat-icon aria-label="info" color="link">info</mat-icon>
     </button>
   </mat-card>
+  <div class="pb-10"></div>
   <mat-paginator
     class="w-full fixed bottom-0"
     [length]="length"
