Initialized analisi page and installed ng2-chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         <mat-icon aria-label="acquisti">storefront</mat-icon>
         Acquisti
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item routerLink="analisi">
         <mat-icon aria-label="analisi">show_chart</mat-icon>
         Analisi Vendite
       </a>
@@ -51,7 +51,7 @@
           <mat-icon aria-label="acquisti">storefront</mat-icon>
           Acquisti
         </button>
-        <button mat-button>
+        <button mat-button routerLink="analisi">
           <mat-icon aria-label="analisi">show_chart</mat-icon>
           Analisi Vendite
         </button>
