--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -5,7 +5,7 @@
                 {{item.title}}
                 <button mat-icon-button (click)="openDettaglio(item)">
                     <mat-icon aria-label="info" color="link">info</mat-icon>
-                  </button>
+                </button>
             </mat-card-title>
             <mat-card-subtitle>{{item.category}}</mat-card-subtitle>
 
@@ -18,14 +18,14 @@
         </mat-card-content>
         <mat-card-actions>
             <div class="grid gap-4 grid-cols-2 px-2">
-                <form class="example-form">
-                    <mat-form-field class="example-half-width">
-                        <mat-label>q.ta</mat-label>
-                        <input type="number" matInput styrle="width:20px !important">
-                    </mat-form-field>
+                <form class="example-form" [formGroup]="loginForm">
+                    <div>
+                        <mat-label>quantità: </mat-label>
+                        <input formControlName="qta" type="number" matInput style=" color: black; width:100px !important" [defaultValue]="10">
+                    </div>
                 </form>
                 <button mat-button>
-                    <mat-icon aria-hidden="false">add_circle</mat-icon>
+                    <mat-icon aria-hidden="false" (click)="spostaNelCarrello(item)">add_circle</mat-icon>
                 </button>
             </div>
         </mat-card-actions>
