--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -31,6 +31,7 @@
         </mat-form-field>
         <mat-form-field
           floatLabel="never"
+          appearance="fill"
           class="w-1/2 py-4 px-6 leading-tight"
           color="accent"
         >
@@ -53,7 +54,6 @@
       </div>
     </div>
   </form>
-
   <mat-card class="example-card" *ngFor="let card of obs | async">
     <mat-card-header>
       <mat-card-title>{{ card.amazonOrderId }}</mat-card-title>
