Aggiunti commenti, inizializzazione e colori

--- a/src/app/pages/analisi/analisi.component.html
+++ b/src/app/pages/analisi/analisi.component.html
@@ -39,8 +39,8 @@
         baseChart
         [datasets]="barChartData"
         [labels]="barChartLabels"
-        [options]="barChartOptions"
-        [legend]="barChartLegend"
+        [options]="chartOptions"
+        [legend]="chartLegend"
         chartType="bar"
       ></canvas>
     </div>
@@ -103,8 +103,8 @@
         baseChart
         [datasets]="lineChartData"
         [labels]="lineChartLabels"
-        [options]="lineChartOptions"
-        [legend]="lineChartLegend"
+        [options]="chartOptions"
+        [legend]="chartLegend"
         chartType="line"
       ></canvas>
     </div>
