--- a/src/app/pages/carrello/carrello.component.html
+++ b/src/app/pages/carrello/carrello.component.html
@@ -31,4 +31,5 @@
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
   <button mat-button (click)="svuota()">Svuota</button>
+  <button mat-button (click)="acquista()">Acquista</button>
 </div>
