--- a/src/app/pages/acquisti/acquisti-dettaglio/acquisti-dettaglio.component.html
+++ b/src/app/pages/acquisti/acquisti-dettaglio/acquisti-dettaglio.component.html
@@ -1,1 +1,36 @@
-<p>acquisti-dettaglio works!</p>
+<!-- <div mat-dialog-title class="flex justify-between items-center">
+  <h1>{{ acquisto.purchaseId }}</h1>
+</div>
+<div mat-dialog-content class="mat-typography">
+  <div class="grid grid-flow-col grid-cols-6 grid-rows-6 gap-4">
+    <div *ngFor="let item of acquisto | keyvalue">
+      <p role="listitem" *ngIf="item.key !== 'Acquistiprodotti'">
+        {{ item.key | titlecase }}: <br />
+        {{ item.value }}
+      </p>
+      <mat-divider *ngIf="item.key !== 'Acquistiprodotti'"></mat-divider>
+    </div>
+  </div>
+  <div class="pt-5">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Prodotti </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div *ngFor="let prodotto of ordine.ordersItems">
+        <div class="grid grid-flow-col grid-cols-3 grid-rows-3 gap-4">
+          <div *ngFor="let item of prodotto | keyvalue">
+            <p>
+              {{ item.key | titlecase }}: <br />
+              {{ item.value }}
+            </p>
+            <mat-divider class="pt-2"></mat-divider>
+          </div>
+        </div>
+        <mat-divider></mat-divider>
+      </div>
+    </mat-expansion-panel>
+  </div>
+</div>
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close>Close</button>
+</div> -->
