--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -54,19 +54,20 @@
       </div>
     </div>
   </form>
-
-  
-  <mat-card class="example-card" *ngFor="let card of obs | async">
+  <mat-card
+    class="force-flex justify-center items-center w-3/4 mx-auto mt-2"
+    *ngFor="let card of obs | async"
+  >
     <mat-card-header>
       <mat-card-title>{{ card.amazonOrderId }}</mat-card-title>
       <mat-card-subtitle>{{ card.buyerEmail }}</mat-card-subtitle>
     </mat-card-header>
-    <span class="spacer"></span>
-    <mat-card-content>
+    <span class="flex-auto"></span>
+    <mat-card-content class="w-1/2">
       <p>{{ card.purchaseDate | date: "dd/MM/yyyy" }}</p>
       <!--Lista Oggeti-->
       <mat-accordion>
-        <mat-expansion-panel class="w-max">
+        <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title> Prodotti </mat-panel-title>
           </mat-expansion-panel-header>
@@ -84,7 +85,7 @@
       </mat-accordion>
       <!--Fine lista oggetti-->
     </mat-card-content>
-    <span class="spacer"></span>
+    <span class="flex-auto"></span>
     <button mat-icon-button (click)="openDettaglio(card)">
       <mat-icon aria-label="info" color="link">info</mat-icon>
     </button>
