--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -1,32 +1,35 @@
 <div class="grid gap-4 grid-cols-5 p-8">
   <mat-card class="example-card" *ngFor="let item of listaProdotti">
     <mat-card-header>
-      <mat-card-title>
-        {{ item.title }}
-        <button mat-icon-button (click)="openDettaglio(item)">
-          <mat-icon aria-label="info" color="link">info</mat-icon>
-        </button>
-      </mat-card-title>
-      <mat-card-subtitle>{{ item.category }}</mat-card-subtitle>
+        <mat-card-title>
+            {{item.title}}
+            <button mat-icon-button (click)="openDettaglio(item)">
+                <mat-icon aria-label="info" color="link">info</mat-icon>
+            </button>
+        </mat-card-title>
+        <mat-card-subtitle>{{item.category}}</mat-card-subtitle>
+
     </mat-card-header>
-    <img mat-card-image src="assets/images.jpg" alt="foto tech" />
+    <img mat-card-image src="assets/images.jpg" alt="foto tech">
     <mat-card-content>
-      <p>MAGAZZINO: {{ item.stock }}</p>
+        <p>
+            MAGAZZINO: {{item.stock}}
+        </p>
     </mat-card-content>
     <mat-card-actions>
-      <div class="grid gap-4 grid-cols-2 px-2">
-        <form class="example-form">
-          <mat-form-field class="example-half-width">
-            <mat-label>q.ta</mat-label>
-            <input type="number" matInput styrle="width:20px !important" />
-          </mat-form-field>
-        </form>
-        <button mat-button>
-          <mat-icon aria-hidden="false">add_circle</mat-icon>
-        </button>
-      </div>
+        <div class="grid gap-4 grid-cols-2 px-2">
+            <form class="example-form" [formGroup]="loginForm">
+                <div>
+                    <mat-label>quantità: </mat-label>
+                    <input formControlName="qta" type="number" matInput style=" color: black; width:100px !important" [defaultValue]="10">
+                </div>
+            </form>
+            <button mat-button>
+                <mat-icon aria-hidden="false" (click)="spostaNelCarrello(item)">add_circle</mat-icon>
+            </button>
+        </div>
     </mat-card-actions>
-  </mat-card>
+</mat-card>
 </div>
 <div class="pb-10"></div>
 <mat-paginator
