--- a/src/app/pages/carrello/carrello.component.html
+++ b/src/app/pages/carrello/carrello.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
+<h1 mat-dialog-title>CARRELLO</h1>
 <div class="grid gap-2 grid-cols-2 p-8">
   <div mat-dialog-content *ngFor="let item of elementiCarrello">
     <mat-card-content>
@@ -25,6 +25,7 @@
         quantità: {{item.qta}}
       </p>
 
+      <mat-divider></mat-divider> 
     </mat-card-content>
   </div>
 </div>
