--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -21,7 +21,7 @@
             <form class="example-form" [formGroup]="loginForm">
                 <div>
                     <mat-label>quantità: </mat-label>
-                    <input formControlName="qta" type="number" matInput style=" color: black; width:100px !important" [defaultValue]="10">
+                    <input formControlName="qta" type="number" matInput style=" color: white; width:100px !important" [defaultValue]="10">
                 </div>
             </form>
             <button mat-button>
