--- a/src/app/pages/notifiche/notifiche.component.html
+++ b/src/app/pages/notifiche/notifiche.component.html
@@ -1,16 +1,15 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
-<div class="grid gap-2 grid-cols-2 p-8">
-  <div mat-dialog-content *ngFor="let item of notifiche">
-    <mat-card-content>
+<h1 mat-dialog-title>NOTIFICHE</h1>
+<div mat-dialog-content *ngFor="let item of notifiche">
+    <mat-card-content class="pt-4">
 
-      <p>
-        ATTENZIONE: IL PRODOTTO {{item.asin}} STA PER FINIRE<br>
-        MAGAZZINO: {{item.qta}}
-      </p>
+        <p>
+            ATTENZIONE: IL PRODOTTO {{item.title}} ( {{item.asin}} ) STA PER FINIRE<br>
+            MAGAZZINO: {{item.qta}}
+        </p>
 
     </mat-card-content>
-  </div>
+    <mat-divider></mat-divider>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
+    <button mat-button mat-dialog-close>Close</button>
 </div>
