Fix ordini dettaglio

--- a/src/app/pages/ordini/ordini.component.html
+++ b/src/app/pages/ordini/ordini.component.html
@@ -64,7 +64,7 @@
     </mat-card-header>
     <span class="flex-auto"></span>
     <mat-card-content class="w-1/2">
-      <p>{{ card.purchaseDate | date: "dd/MM/yyyy" }}</p>
+      <p>Data acquisto: {{ card.purchaseDate | date: "dd/MM/yyyy" }}</p>
       <!--Lista Oggeti-->
       <mat-accordion>
         <mat-expansion-panel>
