--- a/src/app/pages/carrello/carrello.component.html
+++ b/src/app/pages/carrello/carrello.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>CARRELLO</h1>
 <div class="grid gap-2 grid-cols-2 p-8">
+  <p *ngIf="acquistoFatto">ACQUISTO ESEGUITO</p>
   <div mat-dialog-content *ngFor="let item of elementiCarrello">
     <mat-card-content>
-
       <p>
         ASIN: {{item.prodotto.asin}}
       </p>
