--- a/src/app/pages/carrello/carrello.component.html
+++ b/src/app/pages/carrello/carrello.component.html
@@ -3,34 +3,22 @@
   <p *ngIf="acquistoFatto">ACQUISTO ESEGUITO</p>
   <div mat-dialog-content *ngFor="let item of elementiCarrello">
     <mat-card-content>
-      <p>
-        ASIN: {{item.prodotto.asin}}
-      </p>
-      <p>
-        title: {{item.prodotto.title}}
-      </p>
-      <p>
-        category: {{item.prodotto.category}}
-      </p>
-      <p>
-        price: {{item.prodotto.price}}
-      </p>
-      <p>
-        stock: {{item.prodotto.stock}}
-      </p>
-      <p>
-        brand: {{item.prodotto.brand}}
-      </p>
-      <p>
-        quantità: {{item.quantita}}
-      </p>
-      <button mat-button (click)="togli(item.prodotto.asin)" color="warn">canc</button>
-      <mat-divider></mat-divider> 
+      <p>ASIN: {{ item.prodotto.asin }}</p>
+      <p>title: {{ item.prodotto.title }}</p>
+      <p>category: {{ item.prodotto.category }}</p>
+      <p>price: {{ item.prodotto.price }}</p>
+      <p>stock: {{ item.prodotto.stock }}</p>
+      <p>brand: {{ item.prodotto.brand }}</p>
+      <p>quantità: {{ item.quantita }}</p>
+      <button mat-button (click)="togli(item.prodotto.asin)" color="warn">
+        canc
+      </button>
+      <mat-divider></mat-divider>
     </mat-card-content>
   </div>
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
   <button mat-button (click)="svuota()" color="warn">Svuota</button>
-  <button mat-button (click)="acquista()"color="accent">Acquista</button>
+  <button mat-button (click)="acquista()" color="accent">Acquista</button>
 </div>
