--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -1,5 +1,5 @@
 <div class="grid gap-4 grid-cols-5 p-8">
-  <mat-card class="example-card" *ngFor="let item of listaProdotti">
+  <mat-card *ngFor="let item of listaProdotti">
     <mat-card-header>
       <mat-card-title>
         {{ item.title }}
@@ -15,26 +15,24 @@
       alt="{{ item.title }}"
     />
     <mat-card-content>
-      <p>MAGAZZINO: {{ item.stock }}</p>
+      <p>Magazzino: {{ item.stock }}</p>
     </mat-card-content>
     <mat-card-actions>
       <div class="grid gap-4 grid-cols-2 px-2">
         <form class="example-form" [formGroup]="loginForm">
-          <div>
-            <mat-label>quantità: </mat-label>
-            <input
-              formControlName="qta"
-              type="number"
-              matInput
-              style="color: white; width: 100px !important"
-              [defaultValue]="10"
-            />
-          </div>
+          <mat-label> Quantità: </mat-label>
+          <input
+            formControlName="qta"
+            type="number"
+            matInput
+            class="w-24 text-white"
+            [defaultValue]="10"
+          />
         </form>
         <button mat-button>
-          <mat-icon aria-hidden="false" (click)="spostaNelCarrello(item)"
-            >add_circle</mat-icon
-          >
+          <mat-icon aria-hidden="false" (click)="spostaNelCarrello(item)">
+            add_circle
+          </mat-icon>
         </button>
       </div>
     </mat-card-actions>
