dio quanto mi dava fastidio il badge in alto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,8 +72,15 @@
         </button>
       </div>
       <span class="flex-auto"></span>
-      <button mat-icon-button [matBadge]="notifiche.length" matBadgeColor="warn" matBadgePosition="before" (click)="openNotifiche()">
-        <mat-icon aria-label="notifiche">notifications</mat-icon>
+      <button mat-icon-button (click)="openNotifiche()">
+        <mat-icon
+          aria-label="notifiche"
+          [matBadge]="notifiche.length"
+          matBadgeColor="warn"
+          matBadgePosition="before"
+        >
+          notifications
+        </mat-icon>
       </button>
       <button mat-icon-button (click)="openCarrello()">
         <mat-icon aria-label="carrello">shopping_cart</mat-icon>
